--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.75"
 clap = { version = "4.4.3", features = ["derive"] }
+colored = "2.0.4"
 git2 = "0.18.0"
