--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ anyhow = "1.0.75"
 clap = { version = "4.4.3", features = ["derive"] }
 git2 = "0.18.0"
 owo-colors = "3.5.0"
+serde = { version = "1.0.188", features = ["derive"] }
+toml = "0.8.0"
+xdg = "2.5.2"
